# mcp-pennylane

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-EN.md  README.md
.github/workflows/: ci.yml  refresh-openapi.yml  release.yml
scripts/refresh-openapi/: Cargo.toml
scripts/refresh-openapi/src/: main.rs
server/: Cargo.toml  build.rs
server/openapi/: accounting.json
server/src/: client.rs  config.rs  error.rs  http_server.rs  lib.rs  main.rs  redact.rs  server.rs  tools.rs
server/tests/: integration_readonly.rs  openapi_invariants.rs
