[package]
name = "mcp-pennylane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for the Pennylane Company API v2 — manage your accounting from Claude"
homepage = "https://github.com/FGRibreau/mcp-pennylane"
documentation = "https://github.com/FGRibreau/mcp-pennylane#readme"
readme = "../README.md"
keywords = ["mcp", "pennylane", "accounting", "claude", "llm"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[lib]
name = "mcp_pennylane"
path = "src/lib.rs"

[[bin]]
name = "mcp-pennylane"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

anyhow = "1"
thiserror = "2"

clap = { version = "4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = "2"
indexmap = { version = "2", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
tower-service = "0.3"
tokio-util = "0.7"
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
# Read-only integration tests that hit the real Pennylane API. Requires the
# env var PENNYLANE_API_KEY to be set to a valid token. Disabled by default so
# `cargo test` stays hermetic and offline-friendly.
integration-tests = []
