[package]
name = "refresh-openapi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "refresh-openapi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
